--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.1",
     "@vee-validate/rules": "^4.5.7",
+    "firebase": "^8.2.7",
     "vee-validate": "^4.5.8",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12",
