--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/forms": "^0.4.1",
     "@vee-validate/rules": "^4.5.7",
     "firebase": "^8.2.7",
+    "howler": "^2.2.3",
     "vee-validate": "^4.5.8",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12",
